code import clean